# reverse-geocode-api

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.nginx.yml  docker-compose.yml  nginx.conf  pyproject.toml  ruff.toml
.github/workflows/: build.yml  test.yml  test_build_deploy.yml
assets/: arch.drawio
docs/: deployment.md
docs/database/: convert.py  convert_shp_to_postgis.md  postgis.md  setup-alembic.md  shp2postgis.ipynb
src/: alembic.ini
src/app/: .env.sample  config.py  main.py
src/app/depedencies/: database.py  static_bearer.py
src/app/execptions/: auth.py
src/app/helpers/: database.py
src/app/integrations/: redis.py
src/app/middlewares/: error_response.py
src/app/models/: admininstration.py
src/app/repositories/: reverse_geo.py
src/app/routers/: reverse_geo.py
src/app/schemas/: response_api.py  reverse_geo.py
src/app/services/: reverse_geo.py
src/migrations/: env.py
src/migrations/versions/: 2025_05_14_0447-5a7d641ff357_create_reverse_geo_table.py
src/tests/app/schemas/: test_response_api.py  test_reverse_geo.py
