[project]
name = "reverse-geocode-api"
version = "0.0.1-dev"
description = "Reverse Geocoding API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.12",
    "multipart==1.2.1",
    "pydantic[email]==2.11.4",
    "pydantic-settings==2.9.1",
    "pyotp==2.9.0",
    "sqlalchemy==2.0.40",
    "uvicorn==0.34.2",
    "qrcode==8.2",
    "psycopg[binary,pool]==3.2.9",
    "alembic==1.15.2",
    "argon2-cffi==23.1.0",
    "uuid-utils==0.10.0",
    "slowapi==0.1.9",
    "python-jose==3.4.0",
    "structlog==25.3.0",
    "passlib==1.7.4",
    "redis==6.1.0",
    "geoalchemy2==0.17.1",
    "shapely==2.1.0",
    "pydantic-extra-types==2.10.4",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.9",
]
docs = [
    "mkdocs-glightbox==0.4.0",
    "mkdocs-material==9.6.14",
    "mkdocstrings[python]==0.29.1",
]
tests = [
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
]
